@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2014,v 1.820 2014/02/22 08:58:06 wen Exp $
+$NetBSD: CHANGES-2014,v 1.821 2014/02/22 09:26:54 obache Exp $
 
 Changes to the packages collection and infrastructure in 2014:
 
@@ -1231,3 +1231,4 @@ Changes to the packages collection and infrastructure in 2014:
 	Updated devel/p5-Module-CoreList to 3.07 [wen 2014-02-22]
 	Updated www/p5-HTTP-Tiny to 0.043 [wen 2014-02-22]
 	Updated textproc/p5-PDF-API2 to 2.021 [wen 2014-02-22]
+	Removed lang/tcl-itcl [obache 2014-02-22]
